--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <span class="ser"><li><a class="home" href="#home"> Home</a></li></span>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                     <li class="ser"><a href="#sign_in"><button>Sign in </button></a></li>
@@ -25,8 +25,7 @@
         </header>
         <section class="sec"> 
             <div class="sec1">
-                <h1>Most <span class="c">Fastest</span></h1>
-                <h1><span class="edf">Delivery</span>Service</h1>
+                <h1>Most <span class="c">Fastest  Delivery</span> Service</h1>
                 <p><span class="textabout">Get your favourite food - Clothing - medication in a flash. You’ll see wheyour rider’s picked up your order, and be able to follow them along the way.</span></p>
             </div>
             </div>
@@ -39,7 +38,7 @@
                 <img class="man" src="image/Page 1/man.png" alt="#">
             </div>
         </section>
-         <section class="s2">
+         <section id="services" class="s2">
             <div class="sec2">
                 <h1>Our Service</h1>
             </div>
@@ -164,18 +163,18 @@
                 <div class="input">
                     <div class="name">
                         <h5>Full Name <span style="color: red;">*</span> </h5>
-                        <input type="Full Name" name="Full Name" id="">
-                        <h5>Enter your password <span style="color: red;">*</span> </h5>
-                        <input type="password" name="Password" id="">
+                        <input type="Full Name" name="Full Name" id="" placeholder="enter your name">
+                        <h5>Enter your email <span style="color: red;">*</span> </h5>
+                        <input type="email" name="email" id="" placeholder="example@gmail.com">
                     </div>
                     <div class="subject">
                         <h5>Your Subject <span style="color: red;">*</span></h5>
-                        <input type="Your subject">
+                        <input type="Your subject" placeholder="enter your commande or subject ...">
                     </div>
                 </div>
-                <div class="messag">
+                <div class="message">
                     <h5>Your Message <span style="color: red;">*</span> </h5>
-                    <input class="msg" type="Your Message" name="Full Name" id="">
+                    <input class="msg" type="Your Message" name="Full Name" id="" placeholder="Leave a message">
                 </div>
             </div>
         </section>
